--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styles/main.css">
     <title>Document</title>
 </head>
 
@@ -15,8 +15,8 @@
         <nav>
             <ul>
 
-                <li><a href='#'>Blog</a></li>
-                <li><a href='#'>Contacto</a></li>
+                <li><a href='/blog.html'>Blog</a></li>
+                <li><a href='/contacto.html'>Contacto</a></li>
             </ul>
         </nav>
         <div class="banner">
